--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"debug": "node server.js"
 	},
 	"dependencies": {
+		"needle": "^3.3.1",
 		"node-html-parser": "^6.1.13",
 		"stremio-addon-sdk": "1.1.x"
 	}
