--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
 		"debug": "node server.js"
 	},
 	"dependencies": {
-		"axios": "^1.7.7",
-		"needle": "^3.3.1",
 		"node-html-parser": "^6.1.13",
-		"stremio-addon-sdk": "1.1.x"
+		"stremio-addon-sdk": "^1.6.10"
 	}
 }
