--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-	"name": "stremio-addon-KanBoxDigital",
+	"name": "stremio-addon-StremioKan",
 	"version": "0.0.1",
-	"description": "Addon for Israel Public Broadcastin Corporation - Kan Digital",
+	"description": "Kan Digital and live broadcast",
 	"scripts": {
-		"start": "node server.js",
-		"debug": "node server.js"
+		"start": "node server.js"
 	},
 	"dependencies": {
 		"axios": "^1.7.7",
-		"needle": "^3.3.1",
 		"node-html-parser": "^6.1.13",
 		"stremio-addon-sdk": "1.1.x"
 	}
