--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,12 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "type": "java",
+            "name": "Java WebCrawler",
+            "request": "launch",
+            "mainClass": "WebCrawler"
+        },
+        {
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
