--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"dependencies": {
 		"axios": "^1.7.7",
 		"node-html-parser": "^6.1.13",
+		"puppeteer": "^23.10.1",
 		"stremio-addon-sdk": "1.1.x"
 	}
 }
