--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
-		"axios": "^1.7.7",
+		"jszip": "^3.10.1",
 		"node-html-parser": "^6.1.13",
-		"puppeteer": "^23.10.1",
 		"stremio-addon-sdk": "1.1.x"
 	}
 }
