--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
       "start": "node addon.js"
     },
     "dependencies": {
-      "jszip": "^3.10.1",
+      "adm-zip": "^0.5.16",
       "node-fetch": "^2.7.0",
       "node-html-parser": "^6.1.3",
       "stremio-addon-sdk": "^2.9.0"
