--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,9 @@
 {
-    "java.project.referencedLibraries": {
-        "include": [
-            "lib/**/*.jar",
-
-            "WebCrawler/lib/json-20230618.jar",
-            "WebCrawler/lib/jsoup-1.18.1.jar",
-        ]
-    }
+    "java.project.referencedLibraries": [
+        "lib/**/*.jar",
+        "WebCrawler/lib/json-20230618.jar",
+        "WebCrawler/lib/jsoup-1.18.1.jar",
+        "WebCrawler/lib/log4j-api-2.12.4.jar",
+        "WebCrawler/lib/log4j-core-2.12.4.jar"
+    ]
 }
