modified name of debug task

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
     "configurations": [
         {
             "type": "java",
-            "name": "Java WebCrawler",
+            "name": "Java Kan WebCrawler",
             "request": "launch",
             "mainClass": "WebCrawler"
         },
