--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,7 @@
       "start": "node addon.js"
     },
     "dependencies": {
+      "fs": "^0.0.1-security",
       "adm-zip": "^0.5.16",
       "node-fetch": "^2.7.0",
       "node-html-parser": "^6.1.3",
