--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	},
 	"dependencies": {
 		"adm-zip": "^0.5.16",
+		"fs": "^0.0.1-security",
 		"node-html-parser": "^6.1.13",
 		"stremio-addon-sdk": "1.1.x"
 	}
