changed the name of the package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "stremio-addon-StremioKan",
+	"name": "Stremio-KanBoxAddon",
 	"version": "0.0.1",
 	"description": "Kan Digital and live broadcast",
 	"scripts": {
