--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-	"name": "stremio-addon-StremioKann",
+	"name": "stremio-addon-Kan",
 	"version": "0.0.1",
 	"description": "Kan Digital and live broadcast",
 	"scripts": {
 		"start": "node server.js"
 	},
 	"dependencies": {
-		"axios": "",
 		"adm-zip": "^0.5.16",
-		"fs": "^0.0.1-security",
+		"axios": "^1.7.9",
 		"node-html-parser": "^6.1.13",
 		"stremio-addon-sdk": "1.1.x"
 	}
