--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,9 @@
         "WebCrawler/lib/jsoup-1.18.1.jar",
         "WebCrawler/lib/log4j-api-2.12.4.jar",
         "WebCrawler/lib/log4j-core-2.12.4.jar"
+    ],
+    "java.project.sourcePaths": [
+        "WebCrawler/src",
+        "WebCrawler"
     ]
 }
