Addedstarting tf  the Channel 12 Reeshet web crawler

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,6 +18,12 @@
         },
         {
             "type": "java",
+            "name": "Reshet WebCrawler",
+            "request": "launch",
+            "mainClass": "WebCrawlerReshet"
+        },
+        {
+            "type": "java",
             "name": "Various TV WebCrawler",
             "request": "launch",
             "mainClass": "WebCrawlerVariousTV"
