--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"dependencies": {
 		"adm-zip": "^0.5.16",
 		"axios": "^1.7.9",
+		"axios-retry": "^4.5.0",
 		"node-html-parser": "^6.1.13",
 		"stremio-addon-sdk": "1.1.x"
 	}
