--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"axios": "^1.7.9",
 		"axios-retry": "^4.5.0",
 		"node-html-parser": "^6.1.13",
+		"p-limit": "^6.2.0",
 		"stremio-addon-sdk": "1.1.x"
 	}
 }
