--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"node-cron": "^3.0.3",
 		"node-html-parser": "^6.1.13",
 		"p-limit": "^6.2.0",
-		"stremio-addon-sdk": "1.1.x"
+		"stremio-addon-sdk": "1.1.x",
+		"uuid": "^11.0.5"
 	}
 }
