changed the sdk module name to all lower caps

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "stremio-addon-Kan",
+	"name": "stremio-addon-kan",
 	"version": "0.0.1",
 	"description": "Kan Digital and live broadcast",
 	"scripts": {
