--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"dependencies": {
 		"adm-zip": "^0.5.16",
 		"axios": "^1.7.9",
+		"dotenv": "^16.4.7",
 		"fs": "^0.0.1-security",
 		"log4js": "^6.9.1",
 		"node-cron": "^3.0.3",
