Added functionality to write files directly to Github

--- a/config/.env
+++ b/config/.env
@@ -1,5 +1,5 @@
-GITHUB_TOKEN=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
-GITHUB_OWNER=Tomarsh
-GITHUB_REPO=Stremio-KanBoxAddon
+GITHUB_TOKEN=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
+REPO_OWNER=Tomartsh
+REPO_NAME=Stremio-KanBoxAddon
 GITHUB_BRANCH=main
 SAVE_MODE=both  # Options: "local", "github", "both"
