--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@ logs
 logs/*.*
 
 #ignore output folders
-#output/*.zip
-#output/*.json
+output
+output/*.*
 output/backup
 
 #ignore java sction of project as it is already obsolete
