updated ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,9 @@ output/*.*
 logs
 logs/*.*
 
+#ignore backup folder
+backups
+backups/*.*
+
 #ignore java sction of project as it is already obsolete
 WebCrawler/
