--- a/.gitignore
+++ b/.gitignore
@@ -5,17 +5,16 @@ package-lock.json
 config/.env
 .env
 
-# ignore output folder
 output
 output/*.*
 
-#ignore the logs folder
 logs
 logs/*.*
 
-#ignore backup folder
 backups
 backups/*.*
 
-#ignore java sction of project as it is already obsolete
 WebCrawler/
+
+classes
+classes/*.*
