--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"axios": "^1.9.0",
 		"dotenv": "^16.5.0",
 		"fs": "^0.0.1-security",
+		"got-scraping": "^4.1.3",
 		"log4js": "^6.9.1",
 		"node-cron": "^3.0.3",
 		"node-html-parser": "^6.1.13",
